# log-analyzer

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  ANALISE_TESTCLIENT_FASTAPI.md  API_GUIDE.md  CHANGELOG.md  COMO_EXECUTAR.md  CORRECOES_ARQUIVOS_TESTE.md  CORRECOES_CODIGO_FONTE.md  Dockerfile  Dockerfile.api  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION.md  MIGRATION_COMPLETE.md  Makefile  OTIMIZACAO_DOCKERFILE.md  README.md  README_OLD.md  README_old.md  REFATORACAO_EXCECOES_GEOGRAPHIC.md  REFATORACAO_TESTES_DEMO.md  RELATORIO_TESTES_API.md  TESTING_GUIDE.md  conftest.py  coverage.xml  demo_project.py  demo_tests.py  docker-compose.yml  main.py  performance_report_1759272052.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api.py  run_tests.py  setup.py  sonar-project.properties  (+5 more)
.github/: badges.md
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  release.yml  sonarcloud.yml
config/: README.md  default.json
docs/: ARCHITECTURE.md  README.md
examples/: api_client_example.py  demo_project.py  test_geographic.py
frontend/: web_app.py
legacy/: README.md  main_legacy.py
nginx/: nginx.conf
samples/: auth_logs.csv  auth_logs.json  firewall_logs.csv  firewall_logs.json
scripts/: README.md  ci_cd_local.py  run_tests.py  test_performance.py  test_pipeline.py
src/log_analyzer/: __init__.py  __main__.py  api.py  api_old.py  cache_system.py  config.py  config_manager.py  core.py  geographic.py  main.py  settings.py  structured_logging.py  utils.py
src/log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/log_analyzer/api/: __init__.py  dependencies.py  endpoints.py  main.py  models.py  utils.py
src/log_analyzer_cyber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  __init__.py  conftest.py  test_api.py  test_api_old.py  test_core.py  test_geographic.py  test_utils.py
